--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.18.1
+  google_fonts: ^5.1.0
+  http: ^1.1.0
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
