--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: ^5.1.0
   http: ^1.1.0
   google_nav_bar: ^5.0.6
+  just_audio: ^0.9.34
+  just_audio_background: ^0.0.1-beta.10
 
 dev_dependencies:
   flutter_test:
